# home-assistant-rest

./: Cargo.toml  LICENSE  README.md  homeassistant-rest-rs.code-workspace
.github/workflows/: ci.yml  live_endpoint.yml  release.yml  update-dependancies.yml  update-dependencies.yml
src/: client.rs  deserialize.rs  deserialze.rs  errors.rs  get.rs  lib.rs  post.rs  requests.rs  responses.rs  serialize.rs  state_enum.rs  types.rs
tests/: get_tests.rs  live_endpoint_canary.rs  post_tests.rs  state_enum.rs
