[package]
name = "home-assistant-rest"
version = "0.2.0"
edition = "2021"
description = "Home Assistant Async REST API Client"
readme = "README.md"
repository = "https://github.com/StefanBossbaly/home-assistant-rest/"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
url = "2.5.0"
serde_qs = "0.12.0"
log = "0.4.21"
bytes = "1.6.0"
thiserror = "1.0.59"

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.37.0", features = ["full"] }
