[package]
name = "home-assistant-rest"
version = "0.2.0"
edition = "2021"
description = "Home Assistant Async REST API Client"
readme = "README.md"
repository = "https://github.com/StefanBossbaly/home-assistant-rest/"
authors = ["Stefan Bossbaly <sbossb@gmail.com>"]
license = "MIT"

include = [
    "/src/**/*.rs",
    "/examples/*.rs",
    "/README.md", 
    "/LICENSE"
]

[features]
serde_debugging = ["dep:serde_path_to_error"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
url = "2.5.1"
serde_qs = "0.12.0"
log = "0.4.21"
bytes = "1.6.0"
thiserror = "1.0.61"
serde_path_to_error = { version = "0.1.16", optional = true }

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
serde_path_to_error = "0.1.16"
